# Python-homework-5

./: README.md  pyproject.toml
src/python_homework_5/: hw5-1.py  hw5-2.py  hw5-3.py  hw5_1.py  hw5_2.py  hw5_3.py
